# quorumqa

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmark/: analyze_family_floor.py  audit_quota_tokens.py  build_moo_calibration.py  build_rag_index.py  build_rag_index_preembedded.py  build_wrongness_predictor.py  classify_pool_checkability.py  lever_experiments.py  load_aime.py  load_gpqa.py  load_gsm8k.py  load_lexam.py  load_math.py  load_math_open.py  load_medqa.py  load_mmlu_pro.py  load_supergpqa.py  math_grade.py  math_open_engine.py  qwen38_baseline.py  r3_relevance_rubric.md  rescore_moo_router.py  retry_dropped.py  run_benchmark.py  run_gsm8k.py  run_lexam.py  run_math.py  run_math_open.py  run_medqa.py  run_mmlu_pro.py  run_moo_eval.py  run_supergpqa.py  score.py  score_r3_relevance.py  verify_rag_search.py
dashboard/: app.py
deploy/: README.md  oss_client.py
docs/: agentic-rebuild-scoping.md  architecture.md  capability-roadmap.md  demo-script.md  frontier-oss-model-research.md  improvement-loop-state.md  mixture-of-orchestrations-plan.md  rag-corpus-notes.md  reasoning-supercharge-plan.md  recursive-rag-plan.md  same-provider-scaling-research.md  submission.md
site_data/: build_cases.py  cases.json
tests/: test_build_rag_index_preembedded.py  test_calibration.py  test_cost_tracker.py  test_engine_offline.py  test_latex_json.py  test_lever_chem_thinking_gate_offline.py  test_lever_permuted_panel_offline.py  test_lever_qwen38_judge_offline.py  test_lever_qwen38_panel_offline.py  test_lever_rag_presolve_offline.py  (+23 more)
(+66 files in other folders)
