[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quorumqa"
version = "0.1.0"
description = "A Qwen Cloud agent society: cheap parallel solvers vote, escalate to skeptic/verifier/judge only on disagreement."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
